# architecture-fastapi

src/: Dockerfile  pyproject.toml
src/adapters/repositories/employee_repository/: in_memory_repository.py  mongodb_repository.py
src/domain/entities/: employee.py  salary.py
src/domain/value_objects/: price.py
src/drivers/rest/: dependencies.py  exception_handlers.py  main.py
src/drivers/rest/routers/: employee.py  schema.py
src/ports/repositories/: employee_repository.py
src/tests/: utils.py
src/tests/unit/: submit_salary_use_case_test.py
src/use_cases/: exceptions.py  submit_salary_use_case.py
