[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["antonRomankevich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "7.4.4"
fastapi = "0.110.0"
httpx = "0.27.0"
motor = "3.3.2"
mypy = "1.9.0"
pytest-asyncio = "0.23.5"
pytest = "8.1.1"
ruff = "0.3.3"
uvicorn = "0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
